{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 78,
  "lineage": "4d2ed189-6971-5ee2-219b-862fe61a79a9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:network-acl/acl-08eeaccaf3111320e",
            "default_network_acl_id": "acl-08eeaccaf3111320e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08eeaccaf3111320e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767398128098",
            "subnet_ids": [
              "subnet-005a4acf7d5f26656",
              "subnet-00710479e2d9a7474",
              "subnet-0146766583500cca4",
              "subnet-01b318e3c2dbf9e77",
              "subnet-07554bc6e10308460",
              "subnet-0eece1c390f7c22bc"
            ],
            "tags": {
              "Name": "HR-prod-myvpc-default",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-default",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-078ae6617d9485e31",
            "default_route_table_id": "rtb-078ae6617d9485e31",
            "id": "rtb-078ae6617d9485e31",
            "owner_id": "767398128098",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "HR-prod-myvpc-default",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-default",
              "env": "prod",
              "owners": "HR"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:security-group/sg-0a9c716115d05b768",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a9c716115d05b768",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767398128098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "HR-prod-myvpc-default",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-default",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb169cbfcc491ad4",
            "arn": "arn:aws:ec2:us-east-2:767398128098:elastic-ip/eipalloc-0eb169cbfcc491ad4",
            "domain": "vpc",
            "id": "eipalloc-0eb169cbfcc491ad4",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-12-139.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.12.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "HR-prod-myvpc-us-east-2a",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-us-east-2a",
              "env": "prod",
              "owners": "HR"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:internet-gateway/igw-0aa7b49031fac302a",
            "id": "igw-0aa7b49031fac302a",
            "owner_id": "767398128098",
            "tags": {
              "Name": "HR-prod-myvpc",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eb169cbfcc491ad4",
            "association_id": "eipassoc-013d81f786d305e21",
            "connectivity_type": "public",
            "id": "nat-0f761ec75953ad6d8",
            "network_interface_id": "eni-0159043fbad18c61b",
            "private_ip": "10.0.1.24",
            "public_ip": "3.23.12.139",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b318e3c2dbf9e77",
            "tags": {
              "Name": "HR-prod-myvpc-us-east-2a",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-us-east-2a",
              "env": "prod",
              "owners": "HR"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04a2b07c1a4800d8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f761ec75953ad6d8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a2b07c1a4800d8d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa7b49031fac302a",
            "id": "r-rtb-0f6c7c643a39aa1581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6c7c643a39aa158",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-067703aef8a1abab8",
            "id": "rtb-067703aef8a1abab8",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-prod-myvpc-db",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-db",
              "env": "prod",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-04a2b07c1a4800d8d",
            "id": "rtb-04a2b07c1a4800d8d",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-prod-myvpc-private",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-private",
              "env": "prod",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-0f6c7c643a39aa158",
            "id": "rtb-0f6c7c643a39aa158",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "HR-prod-myvpc-public",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-public",
              "env": "prod",
              "owners": "HR"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a40b6557112df2d2",
            "route_table_id": "rtb-067703aef8a1abab8",
            "subnet_id": "subnet-0eece1c390f7c22bc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8f1ccdeb65810a3",
            "route_table_id": "rtb-067703aef8a1abab8",
            "subnet_id": "subnet-005a4acf7d5f26656"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dd6858132e10f67",
            "route_table_id": "rtb-04a2b07c1a4800d8d",
            "subnet_id": "subnet-00710479e2d9a7474"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a18415b6b0d30da",
            "route_table_id": "rtb-04a2b07c1a4800d8d",
            "subnet_id": "subnet-07554bc6e10308460"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c8bf094d7adc286",
            "route_table_id": "rtb-0f6c7c643a39aa158",
            "subnet_id": "subnet-01b318e3c2dbf9e77"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076bd20c13361c6c1",
            "route_table_id": "rtb-0f6c7c643a39aa158",
            "subnet_id": "subnet-0146766583500cca4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-0eece1c390f7c22bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eece1c390f7c22bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-prod-myvpc-db-us-east-2a",
              "Type": "database_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-db-us-east-2a",
              "Type": "database_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-005a4acf7d5f26656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005a4acf7d5f26656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-prod-myvpc-db-us-east-2b",
              "Type": "database_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-db-us-east-2b",
              "Type": "database_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-00710479e2d9a7474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00710479e2d9a7474",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-prod-myvpc-private-us-east-2a",
              "Type": "private_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-private-us-east-2a",
              "Type": "private_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-07554bc6e10308460",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07554bc6e10308460",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-prod-myvpc-private-us-east-2b",
              "Type": "private_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-private-us-east-2b",
              "Type": "private_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-01b318e3c2dbf9e77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b318e3c2dbf9e77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-prod-myvpc-public-us-east-2a",
              "Type": "public_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-public-us-east-2a",
              "Type": "public_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-0146766583500cca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0146766583500cca4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "HR-prod-myvpc-public-us-east-2b",
              "Type": "public_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc-public-us-east-2b",
              "Type": "public_subnet",
              "env": "prod",
              "owners": "HR"
            },
            "vpc_id": "vpc-0e8d620a7e2f3b221"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:vpc/vpc-0e8d620a7e2f3b221",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08eeaccaf3111320e",
            "default_route_table_id": "rtb-078ae6617d9485e31",
            "default_security_group_id": "sg-0a9c716115d05b768",
            "dhcp_options_id": "dopt-0a244f3e9f28a8761",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8d620a7e2f3b221",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078ae6617d9485e31",
            "owner_id": "767398128098",
            "tags": {
              "Name": "HR-prod-myvpc",
              "env": "prod",
              "owners": "HR"
            },
            "tags_all": {
              "Name": "HR-prod-myvpc",
              "env": "prod",
              "owners": "HR"
            }
          }
        }
      ]
    }
  ]
}